# testing-with-quickcheck

./: README.md  package.yaml  testing-with-quickcheck.cabal
lib/: Lib.hs
test/: GenLib.hs  QCMain.hs
